Done till the db migrations

--- a/REST API/My_First_REST_API/.vscode/settings.json
+++ b/REST API/My_First_REST_API/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "blocklist",
         "debugpy",
         "dotenv",
+        "jsonify",
+        "passlib",
         "smorest",
         "sqlalchemy"
     ]
