--- a/REST API/My_First_REST_API/requirements.txt
+++ b/REST API/My_First_REST_API/requirements.txt
@@ -3,3 +3,8 @@ flask-smorest
 python-dotenv
 sqlalchemy
 flask-sqlalchemy
+flask-jwt-extended
+# pass-lib used f=to hash the password that we are going to store in our database
+passlib
+redis
+flask-migrate
